--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -96,13 +96,22 @@
           <div class="row-fluid">
             <div class="span{{ inputSpanType() }}" ng-repeat="input in recipes[order.recipeName].inputs">
               <div class="mixer-input" ng-style="inputStyle($index)">
-                  <div class="critical-level" ng-style="criticalStyle($index)"></div>
+                  <!-- Подписи -->
+                  <div class="critical-level" ng-style="criticalStyle($index)">
+                    <div class="left-label">{{ input.critical }}</div>
+                  </div>
+                  <div class="left-level" ng-style="leftStyle($index)">
+                    <div class="right-label">{{ getLeftQty($index) }}</div>
+                  </div>
+                  <div class="left-level">
+                    <div class="left-label">{{ input.onHand }}</div>
+                  </div>
                   <div class="input-content">
-                    <h3>{{ getProductName(input.productName, input.pct, recipes[order.recipeName].itemType) }}</h3>
+                    <h3>{{ getProductName(input) }}</h3>
                     <h3><span class="ItemDrag over-max-{{ order.inputs[$index] > input.onHand }}" collectionName="inputs" itemNum = {{$index}} data-min="0" data-max="{{ input.onHand }}" >{{ order.inputs[$index] }}</span></h3>
                   </div>
               </div> 
-              <div class="arrow-input"></div>        
+              <div class="arrow-input"></div>
             </div>
           </div>
           <!-- ............. -->
@@ -120,7 +129,7 @@
             <div class="span{{ outputSpanType() }}" ng-repeat="output in recipes[order.recipeName].outputs">
               <div class="arrow-output"></div>
               <div class="mixer-output">
-                <h3>{{ getProductName(output.productName, output.pct, recipes[order.recipeName].itemType) }}</h3>  
+                <h3>{{ getProductName(output) }}</h3>  
                 <h3><span class="ItemDrag over-max-false" collectionName="outputs" itemNum = {{$index}} data-min="0" data-max="{{ output.onHand }}">{{ order.outputs[$index] }}</span></h3>        
               </div>
             </div>
