--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -78,6 +78,7 @@ body {
 	height: 1.4em;
 	background: #8785FF;
 	font-size: 12px;
+	z-index: 1;
 }
 
 .arrow-input::before {
@@ -130,13 +131,19 @@ body {
 	width: 100%; height: 0%;
 }
 
-.left-label {
+.label-container {
 	position: absolute;
 	bottom: 0;
+	z-index: 1;
+	text-shadow:
+        -1px -1px 0 #fff,
+        1px -1px 0 #fff,
+        -1px 1px 0 #fff,
+        1px 1px 0 #fff;
+    opacity: 0.7;
+    color: #00c;
 }
 
 .right-label {
-	position: absolute;
-	bottom: 0;
 	right: 0;
 }
