--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -27,12 +27,20 @@ body {
 	-webkit-border-radius:6px; 
 	-moz-border-radius:5px;
 	border-radius:6px;
-	background-color: #DADAFF; 
+	background-color: #DADAFF;
 	-khtml-border-radius:10px;
 	position: relative;
+	width: 92%;
+	margin: auto;
 }
 
 .input-content {
+	padding-top: 0.1em;
+	position: relative;
+}
+
+.output-content {
+	padding-top: 0.1em;
 	position: relative;
 }
 
@@ -43,6 +51,8 @@ body {
 	border-radius:6px;
 	background-color: #FFE7CE; 
 	-khtml-border-radius:10px;
+	width: 92%;
+	margin: auto;
 }
 
 .mixer-body { 
@@ -122,7 +132,8 @@ body {
 
 .critical-level {
 	position: absolute; 
-	width: 100%; height: 100%; 
+	width: 100%; 
+	height: 100%; 
 	border-bottom: 1px dashed #9C9C9C;
 }
 
@@ -131,19 +142,47 @@ body {
 	width: 100%; height: 0%;
 }
 
+.on-hand-level {
+	position: absolute; 
+	width: 100%; height: 0%;
+}
+
 .label-container {
 	position: absolute;
-	bottom: 0;
+	bottom: -0.7em;
 	z-index: 1;
-	text-shadow:
-        -1px -1px 0 #fff,
-        1px -1px 0 #fff,
-        -1px 1px 0 #fff,
-        1px 1px 0 #fff;
-    opacity: 0.7;
-    color: #00c;
+    opacity: 0.3;
+}
+
+.triangle-right {
+	width: 0px;
+	height: 0px;
+	border-style: solid;
+	border-width: 0.7em 1.4em 0.7em 0;
+	border-color: transparent rgb(153, 153, 153) transparent transparent;
+	position: absolute;
+	left: 50%;
+	margin-left: -1.3em;
+}
+
+.triangle-left {
+	width: 0px;
+	height: 0px;
+	border-style: solid;
+	border-width: 0.7em 0 0.7em 1.4em;
+	border-color: transparent transparent transparent rgb(153, 153, 153);
+	position: absolute;
+	margin-left: 43%;
 }
 
 .right-label {
 	right: 0;
+}
+
+.left-label-margin {
+	margin-left: -100%;
+}
+
+.right-label-margin {
+	margin-left: 50%;
 }
