--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -30,8 +30,8 @@ body {
 	background-color: #DADAFF;
 	-khtml-border-radius:10px;
 	position: relative;
-	width: 92%;
-	margin: auto;
+	width: 98%;
+	
 }
 
 .input-content {
@@ -134,7 +134,7 @@ body {
 	position: absolute; 
 	width: 100%; 
 	height: 100%; 
-	border-bottom: 1px dashed #9C9C9C;
+	border-bottom: 0px dashed #9C9C9C;
 }
 
 .left-level {
@@ -179,10 +179,40 @@ body {
 	right: 0;
 }
 
-.left-label-margin {
-	margin-left: -100%;
-}
-
 .right-label-margin {
 	margin-left: 50%;
+}
+
+.grade-label {
+	float: left;
+	margin-left: 0.2em;
+	color: #4866FF;
+}
+
+.critical-color {
+	color: #FF2929;
+}
+
+.critical-dash {
+	float: left;
+	width: 1.3em;
+	height: 0.65em;
+	border-bottom: 2px solid #FF2929;
+	margin-left: 0.2em;
+}
+
+.grade-dash {
+	float: left;
+	width: 1.3em;
+	height: 0.65em;
+	border-bottom: 2px solid #4866FF;
+	margin-left: 0.2em;
+}
+
+.unit {
+	position: relative;
+	bottom: -0.2em;
+	left: 0.1em;
+	text-align: left;
+	color: #4866FF;
 }
