--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -6,7 +6,6 @@
 @import "bootstrap-responsive";
 
 body {
-    padding-top: 60px;
     background-repeat:no-repeat;
 }
 
@@ -31,7 +30,7 @@ body {
 	-khtml-border-radius:10px;
 	position: relative;
 	width: 98%;
-	
+	margin: auto;
 }
 
 .input-content {
