--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html ng-app>
+<html>
 <head>
-	<script type="text/javascript" src="/assets/Clarity.js"></script>
-
-    <link rel="stylesheet" href="/assets/ClarityKit/ClarityKit.css" type="text/css">
-    <script type="text/javascript" src="/assets/ClarityKit/mootools.js"></script>
-    <script type="text/javascript" src="/assets/ClarityKit/BVTouchable.js"></script>
-    <script type="text/javascript" src="/assets/ClarityKit/ClarityKit.js"></script>
+    <script type="text/javascript" src="/assets/cylinder/mootools.js"></script>
+    <script type="text/javascript" src="/assets/cylinder/BVTouchable.js"></script>
+    <script type="text/javascript" src="/assets/cylinder/cylinder.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>   
 
 	<title>BizFlow</title>
