--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -4,89 +4,31 @@
 
 @import "bootstrap";
 @import "bootstrap-responsive";
+@import "/assets/cylinder/cylinder.css";
 
 body {
     background-repeat:no-repeat;
 }
 
 input[type="text"] {
-    font-size: 1em;
-    color: #00c;
-    text-align: center;
-    font-family: inherit;
-    font-weight: bold;
-    height: 1.2em;
-}
-
-.center {
+	font-weight: bold; 
+	font-size: 2.0em;
+	color: #00c;
 	text-align: center;
-}
-
-.left {
-	text-align: left;
-}
-
-.right {
-	text-align: right;
-}
-
-.mixer-input {
-	padding-bottom: 0.5em; 
-	-webkit-border-radius:6px; 
-	-moz-border-radius:5px;
-	border-radius:6px;
-	background-color: #DADAFF;
-	-khtml-border-radius:10px;
-	position: relative;
-	width: 98%;
-	margin: auto;
-}
-
-.input-content {
-	padding-top: 0.1em;
-	position: relative;
-}
-
-.output-content {
-	padding-top: 0.1em;
-	position: relative;
-}
-
-.mixer-output {
-	padding-bottom: 0.5em; 
-	-webkit-border-radius:6px; 
-	-moz-border-radius:5px;
-	border-radius:6px;
-	background-color: #FFE7CE; 
-	-khtml-border-radius:10px;
-	width: 92%;
-	margin: auto;
+	height: 1.0em;
 }
 
 .mixer-body { 
-	-webkit-border-radius:6px; 
+	-webkit-border-radius:6px;
 	-moz-border-radius:5px;
 	border-radius:6px;
 	background-color: #D8D8D8; 
 	-khtml-border-radius:10px;
+	text-align: center;
 }
 
-.history-body {
-	-webkit-border-radius:6px; 
-	-moz-border-radius:5px;
-	border-radius:6px;
-	background-color: #E3E3E3; 
-	-khtml-border-radius:10px;
-}
-
-.history-all {
-	-webkit-border-radius:6px; 
-	-moz-border-radius:5px;
-	border-radius:6px;
-	border: 1px solid #C2C2C2;
-	background-color: #F5F5F5; 
-	-khtml-border-radius:10px;
-	margin-bottom: 1em;
+.center-div {
+	margin: 0 auto;
 }
 
 .arrow-input {
@@ -97,6 +39,8 @@ input[type="text"] {
 	background: #8785FF;
 	font-size: 12px;
 	z-index: 1;
+	margin-top: -1.2em;
+	margin-bottom: 1.2em;
 }
 
 .arrow-input::before {
@@ -112,6 +56,7 @@ input[type="text"] {
 .arrow-output {
 	position: relative;
 	margin: 0 auto;
+	margin-bottom: -0.8em;
 	width: 2em;
 	height: 1.4em;
 	background: #FFA579;
@@ -128,99 +73,42 @@ input[type="text"] {
 	content: "";
 }
 
-.over-max-false {
-	color: #00c;
-	border-bottom: 1px dashed #00c;
+.submit-container {
+	text-align: center;
 }
 
-.over-max-true {
-	color: #f00;
-	border-bottom: 1px dashed #f00;
+.history-body {
+	-webkit-border-radius:6px; 
+	-moz-border-radius:5px;
+	border-radius:6px;
+	background-color: #E3E3E3; 
+	-khtml-border-radius:10px;
+	text-align: center;
+	margin-bottom: 0.5em;
+	margin-top: 0.5em;
 }
 
-.critical-level {
-	position: absolute; 
-	width: 100%; 
-	height: 100%; 
-	border-bottom: 0px dashed #9C9C9C;
+.history {
+	-webkit-border-radius:6px; 
+	-moz-border-radius:5px;
+	border-radius:6px;
+	background-color: #F7F7F7; 
+	-khtml-border-radius:10px;
+	margin-bottom: 1em;
+	margin-top: 1em;
+	border: 1px solid #DCDCDC;
+	text-align: center;
 }
 
-.left-level {
-	position: absolute; 
-	width: 100%; height: 0%;
+.history-date-body {
+    position: absolute;
+    height: 100%;
+    width: 100%;
 }
 
-.on-hand-level {
-	position: absolute; 
-	width: 100%; height: 0%;
-}
-
-.label-container {
-	position: absolute;
-	bottom: -0.7em;
-	z-index: 1;
-    opacity: 0.3;
-}
-
-.triangle-right {
-	width: 0px;
-	height: 0px;
-	border-style: solid;
-	border-width: 0.7em 1.4em 0.7em 0;
-	border-color: transparent rgb(153, 153, 153) transparent transparent;
-	position: absolute;
-	left: 50%;
-	margin-left: -1.3em;
-}
-
-.triangle-left {
-	width: 0px;
-	height: 0px;
-	border-style: solid;
-	border-width: 0.7em 0 0.7em 1.4em;
-	border-color: transparent transparent transparent rgb(153, 153, 153);
-	position: absolute;
-	margin-left: 43%;
-}
-
-.right-label {
-	right: 0;
-}
-
-.right-label-margin {
-	margin-left: 50%;
-}
-
-.grade-label {
-	float: left;
-	margin-left: 0.2em;
-	color: #4866FF;
-}
-
-.critical-color {
-	color: #FF2929;
-}
-
-.critical-dash {
-	float: left;
-	width: 1.3em;
-	height: 0.65em;
-	border-bottom: 2px solid #FF2929;
-	margin-left: 0.2em;
-}
-
-.grade-dash {
-	float: left;
-	width: 1.3em;
-	height: 0.65em;
-	border-bottom: 2px solid #4866FF;
-	margin-left: 0.2em;
-}
-
-.unit {
-	position: relative;
-	bottom: -0.2em;
-	left: 0.1em;
-	text-align: left;
+.cylinder-labels-oum {
+	font-weight: bold;
+	margin-left: 1.2em;
+	margin-bottom: -0.6em;
 	color: #4866FF;
 }
