--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,33 +1,7 @@
-  <script type="text/javascript">
-  // Инициализация объекта класса Clarity,
-  // который устанавливает поведение для DOM-элементов с классами из ClarityKit.js.
-  // Функцию нужно вызывать всякий раз, когда на странице появляются новые элементы 
-  // с данными классами
-  function setUpClarity()
-  {
-    var element = document.getElementById("production"); 
+<div ng-app='bizflow'>
+<div ng-controller='bizFlowCtrl' class='container-fluid'>
 
-    var clarity = new Clarity(element);
-  }
-
-  function scrollDown()
-  {
-    $('html, body').animate({
-        scrollTop: $("#orderRow").offset().top
-    }, "slow");
-  }
-
-  $(document).ready(function() {
-      $('.order-select').bind('change', setUpClarity);
-      $('#submitBtn').bind('click', scrollDown)
-  });
-  </script>
-
-  <body ng-app="bizflow">
-    <div id = "production" class="container-fluid text-center" ng-controller="IndexCtrl">
-
-      <!-- Меню -->
-      <div class="navbar">
+    <div class="navbar">
         <div class="navbar-inner">
           <span class="brand"></span>
           <ul class="nav">
@@ -38,129 +12,64 @@
             </li>
           </ul>
         </div>
-      </div>
-      <!-- .... -->
-
-      <!-- ИСТОРИЯ ПРОИЗВОДСТВА ............................................................ -->
-      <div id="historyRow" class="row-fluid">
-        <div class="row-fluid history-all" ng-repeat="oldOrder in history | filter:query">
-          <div class="row-fluid">
-            <div class="span9">
-
-              <!-- Входные данные -->
-              <div class="row-fluid">
-                <div class="span{{ 12 / oldOrder.inputs.length }}" ng-repeat="input in recipes[oldOrder.recipeName].inputs">
-                  <div class="history-body">
-                    <h3>{{ input.productName }}</h3>
-                    <span >{{ oldOrder.inputs[$index] }}</span> 
-                  </div> 
-                  <div class="arrow-input"></div> 
-                </div>
-              </div>
-              <!-- .............. -->
-
-              <div class="row-fluid history-body">
-                <h2>Операция: {{oldOrder.recipeName}} </h2>
-              </div>
-
-              <!-- Выходные данные -->
-              <div class="row-fluid">
-                <div class="span{{ 12 / oldOrder.outputs.length }}" ng-repeat="output in recipes[oldOrder.recipeName].outputs">
-                  <div class="arrow-output"></div> 
-                  <div class="history-body">
-                    <h3>{{ output.productName }}</h3>
-                    <span >{{ oldOrder.outputs[$index] }}</span> 
-                  </div> 
-                </div>
-              </div>
-              <!-- ............... -->
-
-            </div>
-            <div class="span3">
-              <div class="row-fluid">
-                <h3>Общий объем производства: {{ oldOrder.inputsTotal }} </h3>
-                <h3>Дата: {{ oldOrder.date.toLocaleString() }}</h3>
-              </div>  
-            </div>
-          </div>
-          <br/>
-        </div>
-      </div>
-      <!-- ................................................................................. -->
-
-      <!-- ТЕКУЩИЙ ЗАКАЗ ................................................................... -->
-      <div id="orderRow" class="row-fluid" style="margin-top: 1em;">
-        <div class="span12">
-
-          <!-- Входные данные -->
-          <div class="row-fluid">
-            <div class="span{{ inputSpanType() }}" ng-repeat="input in recipes[order.recipeName].inputs">
-              <div class="mixer-input" ng-style="inputStyle($index)">
-                <div class="critical-level" ng-style="criticalStyle($index)">
-                  <div class="label-container">
-                    <div class="critical-dash"></div>
-                    <div class="grade-label critical-color"><b>{{ input.critical }}</b></div>
-                  </div>
-                </div>
-                <div class="on-hand-level">
-                  <div class="label-container">
-                    <div class="unit"><b>{{ input.unit }}</b></div>
-                    <div class="grade-dash"></div>
-                    <div class="grade-label"><b>{{ input.onHand }}</b></div>
-                  </div>
-                </div>
-                <div class="left-level" ng-style="leftStyle($index)">
-                  <div class="label-container right-label">
-                    <div class="triangle-right"></div>
-                    <div class="label right-label-margin">{{ getLeftQty($index) }}</div>
-                  </div>
-                </div>
-                <div class="input-content">
-                  <h4>{{ getProductName(input) }}</h4>
-                  <h3>
-                    <div>
-                      <span class="ItemDrag over-max-{{ order.inputs[$index] > input.onHand }}" collectionName="inputs" itemNum = {{$index}} data-min="0" data-max="{{ input.onHand }}">{{ order.inputs[$index] }}</span>
-                    </div>
-                  </h3>
-                </div>
-              </div> 
-              <div class="arrow-input"></div>
-            </div>
-          </div>
-          <!-- ............. -->
-
-          <div class="row-fluid mixer-body">
-            <h2>Операция: </h2>
-            <select class="order-select" ng-model="order.recipeName" ng-change="setUpOrder()">
-              <option ng-repeat="recipe in recipes">{{ recipe.name }}</option>
-            </select>
-          </div>
-
-          <!-- Выходные данные -->
-          <div class="row-fluid">
-            <div class="span{{ outputSpanType() }}" ng-repeat="output in recipes[order.recipeName].outputs">
-              <div class="arrow-output"></div>
-              <div class="mixer-output">
-                <div class="output-content">
-                  <h4>{{ getProductName(output) }}</h4>  
-                  <h3><span class="ItemDrag over-max-false" collectionName="outputs" itemNum = {{$index}} data-min="0" data-max="{{ output.onHand }}">{{ order.outputs[$index] }}</span></h3>   
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- ............. -->
-
-          <br/>
-
-          <div class="row-fluid">
-            <form ng-submit="execute()">
-              <input id="submitBtn" class="btn btn-default btn-lg" type="submit" value="{{loading && 'Загрузка...' || 'Пуск'}}" ng-disabled="executeButtonDisabled()">
-            </form>
-          </div>
-        </div>
-
-      </div> 
-      <!-- ................................................................................. -->
-
     </div>
-  </body>
+
+    <div class='row-fluid' ng-repeat='old in history | filter:query'>
+    <div class='span10'>
+        <div class='history'>
+            <div class='row-fluid'>
+                <div ng-repeat='input in old.inputs' class='history-body span{{inputHistorySpanType(old.recipeName)}}'>
+                    <h4>{{input.label}}</h4>
+                    <h4>{{input.qty}}</h4>
+                </div>
+            </div>
+
+            <div class='row-fluid history-body'>
+              <h2>Операция: {{old.recipeName}}</h2>
+            </div>
+
+            <div class='row-fluid'>
+                <div ng-repeat='output in old.outputs' class='history-body span{{outputHistorySpanType(old.recipeName)}}'>
+                    <h4>{{output.label}}</h4>
+                    <h4>{{output.qty}}</h4>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class='span2 history'>
+        <h4>Дата: {{old.date}}</h4>
+    </div>
+    </div>
+
+    <div class='row-fluid' id='inputs'>
+        <div ng-repeat='input in recipes[recipeName].inputs' class='span{{inputSpanType()}}'>
+            <div class='cylinder-labels-oum'>{{input.UOM}}</div>
+            <div cylinder type='input' label='{{getInputName(input)}}' proportion='{{input.pct}}' having='{{input.onHand}}' critical='{{input.critical}}'></div>
+            <div class='arrow-input'></div>
+        </div>
+    </div>
+
+    <div class='row-fluid mixer-body'>
+        <div class='center-div'>
+            <h2><b>Операция:</b></h2>
+            <select ng-model='recipeName' ng-change='changeRounding()'>
+                <option ng-repeat='recipe in recipes'>{{recipe.name}}</option>
+            </select>
+        </div>
+    </div>
+
+    <div class='row-fluid'>
+        <div ng-repeat='output in recipes[recipeName].outputs' class='span{{outputSpanType()}}'>
+            <div class='arrow-output'></div>
+            <div class='cylinder-labels-oum'>{{output.UOM}}</div>
+            <div cylinder type='output' label='{{getOutputName(output)}}' proportion='{{output.pct}}'></div>
+        </div>
+    </div>
+
+    <div class='submit-container'>
+        <form ng-submit="execute()">
+              <input class='btn btn-default btn-lg' type='submit' value="{{loading && 'Загрузка...' || 'Пуск'}}" ng-disabled="executeButtonDisabled()">
+        </form>
+    </div>
+</div>
+</div>
