--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -18,13 +18,20 @@ input[type="text"] {
 	height: 1.0em;
 }
 
-.mixer-body { 
+.mixer-body,
+.history,
+.history-body,
+.history-recipe-true,
+.history-recipe-false {
 	-webkit-border-radius:6px;
 	-moz-border-radius:5px;
 	border-radius:6px;
-	background-color: #D8D8D8; 
 	-khtml-border-radius:10px;
 	text-align: center;
+}
+
+.mixer-body { 
+	background-color: #D8D8D8; 
 }
 
 .center-div {
@@ -40,6 +47,7 @@ input[type="text"] {
 	font-size: 12px;
 	z-index: 1;
 	margin-top: -1.2em;
+	margin-bottom: 1.2em;
 }
 
 .arrow-input::before {
@@ -55,7 +63,6 @@ input[type="text"] {
 .arrow-output {
 	position: relative;
 	margin: 0 auto;
-	margin-bottom: -0.8em;
 	width: 2em;
 	height: 1.4em;
 	background: #FFA579;
@@ -77,26 +84,25 @@ input[type="text"] {
 }
 
 .history-body {
-	-webkit-border-radius:6px; 
-	-moz-border-radius:5px;
-	border-radius:6px;
 	background-color: #E3E3E3; 
-	-khtml-border-radius:10px;
-	text-align: center;
-	margin-bottom: 0.5em;
-	margin-top: 0.5em;
+	margin: 1em;
+}
+
+.history-recipe-true {
+	border: 1px solid #DCDCDC;
+	background-color: #D4FFDF; 
+}
+
+.history-recipe-false {
+	border: 1px solid #DCDCDC;
+	background-color: #FFEAEA; 
 }
 
 .history {
-	-webkit-border-radius:6px; 
-	-moz-border-radius:5px;
-	border-radius:6px;
 	background-color: #F7F7F7; 
-	-khtml-border-radius:10px;
 	margin-bottom: 1em;
 	margin-top: 1em;
 	border: 1px solid #DCDCDC;
-	text-align: center;
 }
 
 .history-date-body {
@@ -110,4 +116,6 @@ input[type="text"] {
 	margin-left: 1.2em;
 	margin-bottom: -0.6em;
 	color: #4866FF;
+	position: relative;
+	margin-top: -0.8em;
 }
