true way of app

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,5 +1,5 @@
-<div ng-app='bizflow'>
-<div ng-controller='bizFlowCtrl' class='container-fluid'>
+<div id='production'>
+<div ng-controller='productionCtrl' class='container-fluid'>
 
     <div class="navbar">
         <div class="navbar-inner">
