--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -5,6 +5,7 @@
 @import "bootstrap";
 @import "bootstrap-responsive";
 @import "/assets/cylinder/cylinder.css";
+@import "/assets/planner/planner.css";
 
 body {
     background-repeat:no-repeat;
