--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <script type="text/javascript" src="/assets/cylinder/mootools.js"></script>
     <script type="text/javascript" src="/assets/cylinder/BVTouchable.js"></script>
     <script type="text/javascript" src="/assets/cylinder/cylinder.js"></script>
+    <script type="text/javascript" src="/assets/planner/planner.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>   
 
 	<title>BizFlow</title>
