--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,5 +1,5 @@
-<div id='production'>
-<div ng-controller='productionCtrl' class='container-fluid'>
+<div id='bizflow'>
+<div ng-controller='bizFlowCtrl' class='container-fluid'>
 
     <div class="navbar">
         <div class="navbar-inner">
@@ -38,35 +38,57 @@
     </div>
     </div>
 
-    <div class='row-fluid' id='inputs'>
-        <div ng-repeat='input in recipes[recipeName].inputs' class='span{{inputSpanType()}}'>
-            <div class='cylinder-labels-oum'>{{input.UOM}}</div>
-            <div cylinder type='input' label='{{getInputName(input)}}' proportion='{{input.pct}}' having='{{input.onHand}}' critical='{{input.critical}}' accuracy="{{input.accuracy}}" rounding="{{input.rounding}}"></div>
-            <div class='arrow-input'></div>
+    <div class="tabbable">
+        <ul class="nav nav-tabs">
+            <li class="active"><a href="#tab1" data-toggle="tab">Производство</a></li>
+            <li><a href="#tab2" data-toggle="tab">Планирование</a></li>
+        </ul>
+        <div class="tab-content" style="width: 100%; display: table;">
+            <div class="tab-pane active" id="tab1">
+                <br/>
+
+                <div class='row-fluid' id='inputs'>
+                <div ng-repeat='input in recipes[recipeName].inputs' class='span{{inputSpanType()}}'>
+                    <div class='cylinder-labels-oum'>{{input.UOM}}</div>
+                    <div cylinder type='input' label='{{getInputName(input)}}' proportion='{{input.pct}}' having='{{input.onHand}}' critical='{{input.critical}}' accuracy="{{input.accuracy}}" rounding="{{input.rounding}}"></div>
+                    <div class='arrow-input'></div>
+                </div>
+            </div>
+
+            <div class='row-fluid mixer-body'>
+                <div class='center-div'>
+                    <h2><b>Операция:</b></h2>
+                    <select ng-model='recipeName'>
+                        <option ng-repeat='recipe in recipes'>{{recipe.name}}</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class='row-fluid'>
+                <div ng-repeat='output in recipes[recipeName].outputs' class='span{{outputSpanType()}}'>
+                    <div class='arrow-output'></div>
+                    <div class='cylinder-labels-oum'>{{output.UOM}}</div>
+                    <div cylinder type='output' label='{{getOutputName(output)}}' proportion='{{output.pct}}' accuracy="{{output.accuracy}}" rounding="{{output.rounding}}"></div>
+                </div>
+            </div>
+
+            <div class='submit-container'>
+                <form ng-submit="execute()">
+                      <input class='btn btn-default btn-lg' type='submit' value="{{loading && 'Загрузка...' || 'Пуск'}}" ng-disabled="executeButtonDisabled()">
+                </form>
+            </div>
+            </div>
+
+            <div class="tab-pane" id="tab2">
+                <div ng-repeat="input in recipes[productionName].inputs">
+                    <div comm-vessels label="{{getInputName(input)}}" proportion="{{input.pct}}" storageqty="50" workshopqty="{{input.onHand}}" critical="20" accuracy="{{input.accuracy}}" rounding="{{input.rounding}}"></div>
+                </div>
+                <div ng-repeat="output in recipes[productionName].outputs">
+                    <div planning label="{{getOutputName(output)}}" proportion="{{output.pct}}" accuracy="{{output.accuracy}}" rounding="{{output.rounding}}"></div>
+                </div>    
+            </div>
         </div>
     </div>
 
-    <div class='row-fluid mixer-body'>
-        <div class='center-div'>
-            <h2><b>Операция:</b></h2>
-            <select ng-model='recipeName'>
-                <option ng-repeat='recipe in recipes'>{{recipe.name}}</option>
-            </select>
-        </div>
-    </div>
-
-    <div class='row-fluid'>
-        <div ng-repeat='output in recipes[recipeName].outputs' class='span{{outputSpanType()}}'>
-            <div class='arrow-output'></div>
-            <div class='cylinder-labels-oum'>{{output.UOM}}</div>
-            <div cylinder type='output' label='{{getOutputName(output)}}' proportion='{{output.pct}}' accuracy="{{output.accuracy}}" rounding="{{output.rounding}}"></div>
-        </div>
-    </div>
-
-    <div class='submit-container'>
-        <form ng-submit="execute()">
-              <input class='btn btn-default btn-lg' type='submit' value="{{loading && 'Загрузка...' || 'Пуск'}}" ng-disabled="executeButtonDisabled()">
-        </form>
-    </div>
 </div>
 </div>
