--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,41 +1,10 @@
 <div id='bizflow'>
 <div ng-controller='bizFlowCtrl' class='container-fluid'>
 
-    <div class="navbar">
-        <div class="navbar-inner">
-          <span class="brand"></span>
-          <ul class="nav">
-            <li>
-              <form class="navbar-search pull-left">
-                История: <input type="text" class="search-query" placeholder="Фильтр" ng-model="query">
-              </form>
-            </li>
-          </ul>
+    <div class='row-fluid' ng-repeat='(key, old) in history | filter:query'>
+        <div class='span12'>
+            <div history key="{{key}}"></div>
         </div>
-    </div>
-
-    <div class='row-fluid' ng-repeat='old in history | filter:query'>
-    <div class='span12'>
-        <div class='history'>
-            <div class='row-fluid'>
-                <div ng-repeat='(label, input) in old.inputs' class='span{{inputHistorySpanType(old.recipeName)}}'>
-                    <div history-element label="{{label}}" qty="{{input.qty}}" type="input"></div>
-                </div>
-            </div>
-
-            <div class='row-fluid'>
-                <div class='span12 history-recipe-{{orderSuccess(old)}}'>
-                    <div history-result date='{{old.date}}' result='{{old.result}}' operation="{{old.recipeName}}"></div>
-                </div>
-            </div>
-
-            <div class='row-fluid'>
-                <div ng-repeat='(label, output) in old.outputs' class='span{{outputHistorySpanType(old.recipeName)}}'>
-                    <div history-element label="{{label}}" qty="{{output.qty}}" type="output"></div>
-                </div>
-            </div>
-        </div>
-    </div>
     </div>
 
     <div class="tabbable">
@@ -43,49 +12,67 @@
             <li class="active"><a href="#tab1" data-toggle="tab">Производство</a></li>
             <li><a href="#tab2" data-toggle="tab">Планирование</a></li>
         </ul>
-        <div class="tab-content" style="width: 100%; display: table;">
+        <div class="tab-content tab-body">
             <div class="tab-pane active" id="tab1">
-                <br/>
 
-                <div class='row-fluid' id='inputs'>
-                <div ng-repeat='input in recipes[recipeName].inputs' class='span{{inputSpanType()}}'>
-                    <div class='cylinder-labels-oum'>{{input.UOM}}</div>
-                    <div cylinder type='input' label='{{getInputName(input)}}' proportion='{{input.pct}}' having='{{input.onHand}}' critical='{{input.critical}}' accuracy="{{input.accuracy}}" rounding="{{input.rounding}}"></div>
-                    <div class='arrow-input'></div>
+                <div ng-repeat="input in recipes[productionName].inputs" id="planning-inputs">
+                    <div comm-vessels label="{{getInputName(input, productionName)}}" proportion="{{input.pct}}" storageqty="50" workshopqty="{{input.onHand}}" critical="20" accuracy="{{input.accuracy}}" rounding="{{input.rounding}}" uom="{{input.UOM}}"></div>
                 </div>
-            </div>
 
-            <div class='row-fluid mixer-body'>
-                <div class='center-div'>
-                    <h2><b>Операция:</b></h2>
-                    <select ng-model='recipeName'>
+                <div id="planning-container" class="planning-container">
+                    <div id="planning-content" class="planning-content">
+                        <div ng-repeat="output in recipes[productionName].outputs">
+                            <div planning label="{{getOutputName(output, productionName)}}" proportion="{{output.pct}}" accuracy="{{output.accuracy}}" rounding="{{output.rounding}}" uom="{{output.UOM}}"></div>
+                        </div>  
+                    </div>
+                </div>
+
+                <div class="planning-selecter">
+                    <h4><b>Продукт:</b></h4>
+                    <select ng-model='productionName' style='width: 85%'>
                         <option ng-repeat='recipe in recipes'>{{recipe.name}}</option>
                     </select>
                 </div>
-            </div>
 
-            <div class='row-fluid'>
-                <div ng-repeat='output in recipes[recipeName].outputs' class='span{{outputSpanType()}}'>
-                    <div class='arrow-output'></div>
-                    <div class='cylinder-labels-oum'>{{output.UOM}}</div>
-                    <div cylinder type='output' label='{{getOutputName(output)}}' proportion='{{output.pct}}' accuracy="{{output.accuracy}}" rounding="{{output.rounding}}"></div>
+                <div class="planning-submit">
+                    <h4><b>Действия:</b></h4>
+                    <div class='submit-container'>
+                        <form ng-submit="planningExecute()" style='margin-bottom: 10px;'>
+                              <input class='btn btn-default btn-lg' type='submit' value="{{loading && 'Загрузка...' || 'Пуск'}}" ng-disabled="executeButtonDisabled()">
+                        </form>
+                    </div>
                 </div>
-            </div>
-
-            <div class='submit-container'>
-                <form ng-submit="execute()">
-                      <input class='btn btn-default btn-lg' type='submit' value="{{loading && 'Загрузка...' || 'Пуск'}}" ng-disabled="executeButtonDisabled()">
-                </form>
-            </div>
             </div>
 
             <div class="tab-pane" id="tab2">
-                <div ng-repeat="input in recipes[productionName].inputs">
-                    <div comm-vessels label="{{getInputName(input)}}" proportion="{{input.pct}}" storageqty="50" workshopqty="{{input.onHand}}" critical="20" accuracy="{{input.accuracy}}" rounding="{{input.rounding}}"></div>
+                <div class='row-fluid' id='productionInputs'>
+                    <div ng-repeat='input in recipes[recipeName].inputs' class='span{{inputSpanType()}}'>
+                        <div cylinder type='input' label='{{getInputName(input, recipeName)}}' proportion='{{input.pct}}' having='{{input.onHand}}' critical='{{input.critical}}' accuracy="{{input.accuracy}}" rounding="{{input.rounding}}" uom="{{input.UOM}}"></div>
+                        <div class='arrow-input'></div>
+                    </div>
                 </div>
-                <div ng-repeat="output in recipes[productionName].outputs">
-                    <div planning label="{{getOutputName(output)}}" proportion="{{output.pct}}" accuracy="{{output.accuracy}}" rounding="{{output.rounding}}"></div>
-                </div>    
+
+                <div class='row-fluid mixer-body'>
+                    <div class='center-div'>
+                        <h2><b>Операция:</b></h2>
+                        <select ng-model='recipeName'>
+                            <option ng-repeat='recipe in recipes'>{{recipe.name}}</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class='row-fluid'>
+                    <div ng-repeat='output in recipes[recipeName].outputs' class='span{{outputSpanType()}}'>
+                        <div class='arrow-output'></div>
+                        <div cylinder type='output' label='{{getOutputName(output, recipeName)}}' proportion='{{output.pct}}' accuracy="{{output.accuracy}}" rounding="{{output.rounding}}" uom="{{output.UOM}}"></div>
+                    </div>
+                </div>
+
+                <div class='submit-container'>
+                    <form ng-submit="execute()">
+                          <input class='btn btn-default btn-lg' type='submit' value="{{loading && 'Загрузка...' || 'Пуск'}}" ng-disabled="executeButtonDisabled()">
+                    </form>
+                </div>
             </div>
         </div>
     </div>
