--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -147,7 +147,8 @@ input[type="text"] {
 	display: table;
 }
 
-.planning-container {
+.planning-container,
+.planning-header {
 	margin-bottom: 1em;
 	float: left;
 	width: 99%;
@@ -158,11 +159,10 @@ input[type="text"] {
 	margin: 0 30% 0 30%;
 }
 
-.planning-selecter {
-	float: left;
-	width: 28%;
-	margin-left: -99%;
-	position: relative;
+.planning-selecter,
+.planning-submit,
+.planning-store-label,
+.planning-workshop-label {
 	text-align: center;
 	-webkit-border-radius:6px; 
 	-moz-border-radius:5px; 
@@ -172,16 +172,19 @@ input[type="text"] {
 	border: 1px solid #B3B3B3;
 }
 
-.planning-submit {
+
+.planning-selecter,
+.planning-store-label {
 	float: left;
-	width: 28%;
-	margin-left: -28%;
+	width: 25%;
+	margin-left: -99%;
 	position: relative;
-	-webkit-border-radius:6px; 
-	-moz-border-radius:5px; 
-  	border-radius:6px;
-  	text-align: center;
-	-khtml-border-radius:10px;
-	background-color: #E3E3E3;
-	border: 1px solid #B3B3B3;
+}
+
+.planning-submit,
+.planning-workshop-label {
+	float: left;
+	width: 25%;
+	margin-left: -25%;
+	position: relative;
 }
