--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 	<%= stylesheet_link_tag    "application", media: "all" %>
 	<%= javascript_include_tag "application", controller_name %>
 	<%= csrf_meta_tags %>
+	<script type="text/javascript" src="/assets/isotope/jquery.isotope.min.js"></script>
 
 </head>
 <body>
