--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -6,6 +6,7 @@
 @import "bootstrap-responsive";
 @import "/assets/cylinder/cylinder.css";
 @import "/assets/planner/planner.css";
+@import "/assets/isotope/isotope.css";
 
 body {
     background-repeat:no-repeat;
@@ -187,4 +188,76 @@ input[type="text"] {
 	width: 25%;
 	margin-left: -25%;
 	position: relative;
+}
+
+#items-catalog-container span {
+  font-size: 1.3em;
+  font-weight: bold;
+  opacity: 0.9;
+}
+
+#items-catalog-container h3 {
+  margin-bottom: 0.3em;
+  margin-top: 0em;
+}
+
+#items-catalog-body,
+#items-catalog,
+.item-card {
+  -webkit-border-radius:6px; 
+  -moz-border-radius:5px; 
+  border-radius:6px;
+  -khtml-border-radius:10px;
+}
+
+#items-catalog-container {
+  font-size: 14px;
+  text-align: center;
+  width: 100%;
+  margin-bottom: 1em;
+}
+
+#items-catalog-body {
+  margin: 0 1% 0 1%;
+}
+
+#items-catalog {
+  background-color: #F7F7F7;
+  border: 1px solid #B3B3B3;
+}
+
+.item-card {
+  background-color: #C8C8C8;
+  border: 1px solid #B3B3B3;
+  -webkit-box-shadow: 0 0 0.5em rgba(0,0,0,0.5);
+  -moz-box-shadow: 0 0 0.5em rgba(0,0,0,0.5);
+  box-shadow: 0 0 0.5em rgba(0,0,0,0.5);
+  padding: 0.5em;
+  margin: 0.5em;
+  width: 13.3em;
+}
+
+.item-uom,
+.item-type,
+.group-name,
+.group-type {
+  color: #212121;
+  font-weight: bold;
+  opacity: 0.7;
+  margin-bottom: 0em;
+}
+
+.item-uom {
+  text-align: right;
+}
+
+.item-name {
+  font-weight: bold;
+  color: #FFFFFF;
+  font-size: 1.5em;
+  margin-bottom: 0.3em;
+}
+
+#sorting {
+  margin-bottom: 0.5em;
 }
