--- a/app/assets/javascripts/planner/planner.css
+++ b/app/assets/javascripts/planner/planner.css
@@ -19,7 +19,6 @@
 	border-top: 1px solid #B3B3B3;
 	border-bottom: 1px solid #B3B3B3;
 	font-size: 1.6em;
-	font-weight: bold;
 }
 
 .tube-qty {
@@ -124,12 +123,10 @@
 
 .planning-label {
 	font-size: 1.4em;
-	font-weight: bold;
 }
 
 .product-label {
-	font-size: 1.2em;
-	font-weight: bold;
+	font-size: 1.2em;;
 }
 
 .hand-input {
