--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -3,14 +3,13 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 @import "bootstrap";
-@import "bootstrap-responsive";
 @import "/assets/cylinder/cylinder.css";
 @import "/assets/planner/planner.css";
 @import "/assets/isotope/isotope.css";
 
 body {
     background-repeat:no-repeat;
-    margin-top: 1em;
+    margin: 0 auto;
 }
 
 input[type="text"] {
@@ -20,24 +19,25 @@ input[type="text"] {
 	height: 1.0em;
 }
 
-.mixer-body,
-.history,
-.history-body,
-.history-recipe-true,
-.history-recipe-false,
-.planning-history-body,
-.store-all-container,
-.workshop-all-container,
-.production-items-container {
+.tabbable {
+	margin-top: 10px;
+}
+
+.tab-pane {
+	min-width: 500px;
+}
+
+.circle-border {
 	-webkit-border-radius:6px;
 	-moz-border-radius:5px;
 	border-radius:6px;
 	-khtml-border-radius:10px;
-	text-align: center;
 }
 
 .mixer-body { 
-	background-color: #D8D8D8; 
+	background-color: #E3E3E3;
+	border: 1px solid #B3B3B3; 
+	text-align: center;
 }
 
 .center-div {
@@ -72,6 +72,9 @@ input[type="text"] {
 	height: 1.4em;
 	background: #FFA579;
 	font-size: 12px;
+	z-index: 1;
+	margin-bottom: 1.2em;
+
 }
 
 .arrow-output::before {
@@ -84,55 +87,9 @@ input[type="text"] {
 	content: "";
 }
 
-.arrow-planning {
-	position: relative;
-	float: right;
-	width: 15%;
-	height: 1.5em;
-	margin-right: -15%;
-	margin-top: 0.7em;
-	background-color: #C8C8C8;
-	z-index: 1;
-}
 
 .submit-container {
 	text-align: center;
-}
-
-.history-body {
-	background-color: #E3E3E3; 
-	margin: 1em;
-}
-
-.planning-history-body {
-	position: relative;
-	background-color: #E3E3E3; 
-	margin-bottom: 0.5em;
-	margin-top: 0.5em;
-	z-index: 3;
-}
-
-.history-recipe-true {
-	border: 1px solid #DCDCDC;
-	background-color: #D4FFDF; 
-}
-
-.history-recipe-false {
-	border: 1px solid #DCDCDC;
-	background-color: #FFEAEA; 
-}
-
-.history {
-	background-color: #F7F7F7; 
-	margin-bottom: 1em;
-	margin-top: 1em;
-	border: 1px solid #BDBDBD;
-}
-
-.history-date-body {
-    position: absolute;
-    height: 100%;
-    width: 100%;
 }
 
 .cylinder-labels-oum {
@@ -148,50 +105,17 @@ input[type="text"] {
 	display: table;
 }
 
-.planning-container,
-.planning-header {
-	margin-bottom: 1em;
-	float: left;
-	width: 99%;
-	text-align: center;
+.recipe-submit-label {
+	margin: 0.3em;
+	font-size: 1.3em;
 }
 
-.planning-content {
-	margin: 0 30% 0 30%;
+.production-items-container {
+	background-color: #FAFAFA;
+  	border: 1px dashed #AEACAC;
 }
 
-.planning-selecter,
-.planning-submit,
-.planning-store-label,
-.planning-workshop-label {
-	text-align: center;
-	-webkit-border-radius:6px; 
-	-moz-border-radius:5px; 
-  	border-radius:6px;
-	-khtml-border-radius:10px;
-	background-color: #E3E3E3;
-	border: 1px solid #B3B3B3;
-}
-
-
-.planning-selecter,
-.planning-store-label {
-	float: left;
-	width: 25%;
-	margin-left: -99%;
-	position: relative;
-	margin-top: 1em;
-}
-
-.planning-submit,
-.planning-workshop-label {
-	float: left;
-	width: 25%;
-	margin-left: -25%;
-	position: relative;
-	margin-top: 1em;
-}
-
+/*------------------- Справочник ------------------*/
 #items-catalog-container span {
   font-size: 1.3em;
   opacity: 0.9;
@@ -228,11 +152,16 @@ input[type="text"] {
 }
 
 .item-card {
-  background-color: #DEDEDE;
+  background-color: #E3E3E3;
   border: 1px solid #B3B3B3;
   padding: 0.5em;
   margin: 0.5em;
   width: 13.3em;
+
+  -webkit-box-shadow: 0 0 0.4em rgba(0,0,0,0.3);
+  -moz-box-shadow: 0 0 0.4em rgba(0,0,0,0.3);
+  -o-box-shadow: 0 0 0.4em rgba(0,0,0,0.3);
+  box-shadow: 0 0 0.4em rgba(0,0,0,0.3);
 
   -webkit-transition: all 0.1s ease;
   -moz-transition: all 0.1s ease;
@@ -276,40 +205,151 @@ input[type="text"] {
   margin-bottom: 0.5em;
 }
 
+/*------------------ Планирование -----------------*/
+
+.planning-container,
+.planning-header {
+	margin-bottom: 1em;
+	float: left;
+	width: 100%;
+	text-align: center;
+}
+
+.planning-content {
+	margin: 0 30% 0 30%;
+}
+
+.planning-selecter-body,
+.planning-submit-body {
+	text-align: center;
+	background-color: #E3E3E3;
+	border: 1px solid #B3B3B3;
+}
+
+.planning-selecter {
+	float: left;
+	width: 25%;
+	margin-left: -100%;
+	position: relative;
+	margin-top: 1em;
+}
+
+.planning-submit {
+	float: left;
+	width: 25%;
+	margin-left: -25%;
+	position: relative;
+	margin-top: 1em;
+}
+
 .store-workshop-container {
+	text-align: center;
 	position: relative;
 }
 
-.store-all-container {
-	position: absolute;
-	width: 27%; 
-	height: 100%; 
-	left: -1%;
-	background-color: #F7F7F7;
-  	border: 1px solid #B3B3B3;
-  	opacity: 0.5;
-}
-
-.workshop-all-container {
-	position: absolute; 
-	width: 27%;
-	height: 100%; 
-	background-color: #FAFAFA;
-  	border: 1px solid #B3B3B3;
-	left: 73%;
-	opacity: 0.5;
-}
-
-.store-workshop-label {
+.store-workshop-container span {
 	font-size: 1.1em;
 }
 
-.recipe-submit-label {
-	margin: 0.3em;
-	font-size: 1.3em;
+.store-all-container,
+.workshop-all-container
+ {
+	position: absolute;
+	width: 27%; 
+	height: 100%; 
+	background-color: #F7F7F7;
+  	border: 1px dashed #7D7D7D;
+  	opacity: 0.6;
 }
 
-.production-items-container {
-	background-color: #FAFAFA;
-  	border: 1px solid #CCCCCC;
+.workshop-all-container {
+	left: 73%;
+}
+
+/*-------------------- История --------------------*/
+
+.arrow-planning {
+	position: relative;
+	float: right;
+	width: 15%;
+	height: 1.5em;
+	margin-right: -15%;
+	background-color: #C8C8C8;
+	z-index: 1;
+}
+
+.history-body {
+	background-color: #E3E3E3; 
+	padding: 0.5em;
+}
+
+.planning-history-body {
+	position: relative;
+	background-color: #E3E3E3; 
+	margin-bottom: 0.5em;
+	margin-top: 0.5em;
+	padding-top: 0.5em;
+	z-index: 3;
+}
+
+.history-recipe-true {
+	border: 1px solid #DCDCDC;
+	background-color: #D4FFDF; 
+	padding-bottom: 1em;
+}
+
+.history-recipe-false {
+	border: 1px solid #DCDCDC;
+	background-color: #FFEAEA; 
+	padding-bottom: 1em;
+}
+
+.history {
+	background-color: #F7F7F7; 
+	margin-bottom: 1em;
+	margin-top: 1em;
+	border: 1px solid #BDBDBD;
+	padding: 5px;
+	text-align: center;
+	font-size: 12px;
+	min-width: 500px;
+}
+
+.history li {
+    list-style-type: none; 
+    font-family: inherit;
+}
+
+.history ul {
+    margin-left: 0; 
+    margin-bottom: 0;
+    padding-left: 0; 
+    font-size: 1.4em;
+    font-weight: bold;
+    font-family: inherit;
+}
+
+.history span {
+	font-size: 1.4em;
+    font-weight: bold;
+}
+
+.history-date-body {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
+/*-----------------------*/
+
+.grad-cylinder:hover > .cylinder-labels {
+	opacity: 0.8 !important;
+}
+
+.storage:hover > .storage-label {
+	opacity: 0.8 !important;
+}
+
+.workshop:hover > .storage-label {
+	opacity: 0.8 !important;
 }
