--- a/app/views/biz_flow/home.html.erb
+++ b/app/views/biz_flow/home.html.erb
@@ -1,11 +1,7 @@
 <div id='bizflow'>
 <div ng-controller='bizFlowCtrl' class='container-fluid'>
 
-    <div class='row-fluid' ng-repeat='(key, old) in history | filter:query'>
-        <div class='span12'>
-            <div history key="{{key}}"></div>
-        </div>
-    </div>
+    <div ng-repeat='(key, old) in history | filter:query' history key="{{key}}"></div>
 
     <div class="tabbable">
         <ul class="nav nav-tabs">
@@ -17,16 +13,14 @@
             <div class="tab-pane active" id="tab1">
 
                 <div class="store-workshop-container">
-                    <div class="store-all-container">
-                        <span class="store-workshop-label">Склад</span>
+                    <div class="store-all-container circle-border">
+                        <span>Склад</span>
                     </div>
-                    <div class="workshop-all-container">
-                        <span class="store-workshop-label">Цех</span>
+                    <div class="workshop-all-container circle-border">
+                        <span>Цех</span>
                     </div>
                     <br/>
-                    <div ng-repeat="input in recipes[planningRecipeName].inputs" id="planning-inputs">
-                        <div comm-vessels label="{{getInputName(input, planningRecipeName)}}" proportion="{{input.pct}}" storageqty="{{input.componentOnHand}}" workshopqty="{{input.productOnHand}}" critical="{{input.componentCritical}}" accuracy="{{input.accuracy}}" rounding="{{input.rounding}}" uom="{{input.UOM}}"></div>
-                    </div>
+                    <div ng-repeat="input in recipes[planningRecipeName].inputs" comm-vessels label="{{getInputName(input, planningRecipeName)}}" proportion="{{input.pct}}" storageqty="{{input.componentOnHand}}" workshopqty="{{input.productOnHand}}" critical="{{input.componentCritical}}" accuracy="{{input.accuracy}}" rounding="{{input.rounding}}" uom="{{input.UOM}}"></div>
                 </div>
 
                 <div id="planning-container" class="planning-container">
@@ -38,25 +32,29 @@
                 </div>
 
                 <div class="planning-selecter">
-                    <div class="recipe-submit-label">Рецепт:</div>
-                    <select ng-model='planningRecipeName' style='width: 85%'>
-                        <option ng-repeat='recipe in recipes'>{{recipe.name}}</option>
-                    </select>
+                    <div class="planning-selecter-body circle-border">
+                        <div class="recipe-submit-label">Рецепт:</div>
+                        <select ng-model='planningRecipeName' style='width: 85%'>
+                            <option ng-repeat='recipe in recipes'>{{recipe.name}}</option>
+                        </select>
+                    </div>
                 </div>
 
                 <div class="planning-submit">
-                    <div class="recipe-submit-label">Действия:</div>
-                    <div class='submit-container'>
-                        <form ng-submit="planningExecute()" style='margin-bottom: 10px;'>
-                              <input class='btn btn-default btn-lg' type='submit' value="{{loading && 'Загрузка...' || 'Пуск'}}" ng-disabled="executeButtonDisabled()">
-                        </form>
+                    <div class="planning-submit-body circle-border">
+                        <div class="recipe-submit-label">Действия:</div>
+                        <div class='submit-container'>
+                            <form ng-submit="planningExecute()" style='margin-bottom: 10px;'>
+                                  <input class='btn btn-default btn-lg' type='submit' value="{{loading && 'Загрузка...' || 'Пуск'}}" ng-disabled="executeButtonDisabled()">
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <div class="tab-pane" id="tab2">
                 <div class='row-fluid' id='productionInputs'>
-                    <div class='span12 production-items-container'>
+                    <div class='span12 production-items-container circle-border'>
                         <div class='row-fluid'>
                             <div ng-repeat='input in recipes[productionRecipeName].inputs' class='span{{inputSpanType()}}'>
                                 <div cylinder type='input' label='{{getInputName(input, productionRecipeName)}}' proportion='{{input.pct}}' having='{{input.productOnHand}}' critical='{{input.productCritical}}' accuracy="{{input.accuracy}}" rounding="{{input.rounding}}" uom="{{input.UOM}}"></div>
@@ -71,7 +69,7 @@
                     </div>
                 </div>
 
-                <div class='row-fluid mixer-body'>
+                <div class='row-fluid mixer-body circle-border'>
                     <div class='center-div'>
                         <h2>Рецепт:</h2>
                         <select ng-model='productionRecipeName'>
@@ -87,7 +85,7 @@
                 </div>
 
                 <div class='row-fluid'>
-                    <div class='span12 production-items-container'>
+                    <div class='span12 production-items-container circle-border'>
                         <div class='row-fluid'>
                             <div ng-repeat='output in recipes[productionRecipeName].outputs' class='span{{outputSpanType()}}'>
                                 <div cylinder type='output' label='{{getOutputName(output, productionRecipeName)}}' proportion='{{output.pct}}' accuracy="{{output.accuracy}}" rounding="{{output.rounding}}" uom="{{output.UOM}}"></div>
@@ -108,11 +106,11 @@
                     <div id="items-catalog-body">
                         <div id="sorting">
                             <span>Сортировать:</span> 
-                            <a class="btn btn-default disabled btn-primary" href="#item-name">Наименование</a>
-                            <a class="btn btn-default" href="#group-name">Группа</a>
-                            <a class="btn btn-default" href="#group-type">Тип группы</a>
-                            <a class="btn btn-default" href="#item-type">Тип</a>
-                            <a class="btn btn-default" href="#item-uom">Единица измерения</a>
+                            <a class="btn disabled btn-primary" href="#item-name">Наименование</a>
+                            <a class="btn" href="#group-name">Группа</a>
+                            <a class="btn" href="#group-type">Тип группы</a>
+                            <a class="btn" href="#item-type">Тип</a>
+                            <a class="btn" href="#item-uom">Единица измерения</a>
                         </div>
                         <div id="items-catalog">
                         </div>
